# fg_utils

./: LICENSE  pyproject.toml
src/fg_utils/: format.py  spec.py  utilities.py
src/fg_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fg_utils/utils/: spec_manipulation.py
